--- a/index.html
+++ b/index.html
@@ -88,6 +88,12 @@
 		<script src="assets/libs/leaflet-basemaps/L.Control.Basemaps-min.js"></script>
 	<script src="assets/libs/Leaflet.ExtraMarkers/js/leaflet.extra-markers.min.js"></script>
 	<script src="assets/config.json"></script>
-	<script src="assets/app.js"></script>
+	<script src="assets/leaflet_map.js"></script>
+
+	<!-- Layer Per Kabupaten/Kota -->
+	<script src="assets/disabilitas_pasuruan.js"></script>
+	<script src="assets/disabilitas_kedirikot.js"></script>
+
+	<script src="assets/leaflet_plugin.js"></script>
 </body>
 </html>
