Fix bug data blitarkab, add symbol multi bahaya layer

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 	<!-- Layer Per Kabupaten/Kota -->
 	<script src="assets/disabilitas_pasuruan.js"></script>
 	<script src="assets/disabilitas_kedirikot.js"></script>
+	<script src="assets/disabilitas_blitarkab.js"></script>
 
 	<script src="assets/leaflet_plugin.js"></script>
 </body>
