disabilitas Kota Malang

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 	<script src="assets/disabilitas_pasuruan.js"></script>
 	<script src="assets/disabilitas_kedirikot.js"></script>
 	<script src="assets/disabilitas_blitarkab.js"></script>
+	<script src="assets/disabilitas_malangkot.js"></script>
 
 	<script src="assets/leaflet_plugin.js"></script>
 </body>
