Add legend control, change default control layer to leaflet control layers tree

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 		crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
 		integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
-		<link rel="stylesheet" href="assets/libs/leaflet-basemaps/L.Control.Basemaps.css">
+	<link rel="stylesheet" href="assets/libs/leaflet-basemaps/L.Control.Basemaps.css">
 	<link rel="stylesheet" href="assets/libs/Leaflet.ExtraMarkers/css/leaflet.extra-markers.min.css">
+	<link rel="stylesheet" href="assets/libs/Leaflet.Control.Layers.Tree/L.Control.Layers.Tree.css">
 	<link rel="stylesheet" href="assets/app.css">
 </head>
 
@@ -85,8 +86,9 @@
 		crossorigin="anonymous"></script>
 	<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
 		integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
-		<script src="assets/libs/leaflet-basemaps/L.Control.Basemaps-min.js"></script>
+	<script src="assets/libs/leaflet-basemaps/L.Control.Basemaps-min.js"></script>
 	<script src="assets/libs/Leaflet.ExtraMarkers/js/leaflet.extra-markers.min.js"></script>
+	<script src="assets/libs/Leaflet.Control.Layers.Tree/L.Control.Layers.Tree.js"></script>
 	<script src="assets/config.json"></script>
 	<script src="assets/leaflet_map.js"></script>
 
@@ -98,4 +100,5 @@
 
 	<script src="assets/leaflet_plugin.js"></script>
 </body>
+
 </html>
