--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
 	<script src="assets/disabilitas_kedirikot.js"></script>
 	<script src="assets/disabilitas_blitarkab.js"></script>
 	<script src="assets/disabilitas_malangkot.js"></script>
+	<script src="assets/disabilitas_pacitan.js"></script>
 
 	<script src="assets/leaflet_plugin.js"></script>
 </body>
