--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@
 	<script src="assets/disabilitas_blitarkab.js"></script>
 	<script src="assets/disabilitas_malangkot.js"></script>
 	<script src="assets/disabilitas_pacitan.js"></script>
+	<script src="assets/disabilitas_lumajang.js"></script>
+	<script src="assets/disabilitas_gresik.js"></script>
 
 	<script src="assets/leaflet_plugin.js"></script>
 </body>
