--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
 	<script src="assets/disabilitas_pacitan.js"></script>
 	<script src="assets/disabilitas_lumajang.js"></script>
 	<script src="assets/disabilitas_gresik.js"></script>
+	<script src="assets/disabilitas_sampang.js"></script>
 
 	<script src="assets/leaflet_plugin.js"></script>
 </body>
