disabilitas surabaya kota

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 	<script src="assets/disabilitas_lumajang.js"></script>
 	<script src="assets/disabilitas_gresik.js"></script>
 	<script src="assets/disabilitas_sampang.js"></script>
+	<script src="assets/disabilitas_surabayakot.js"></script>
 
 	<script src="assets/leaflet_plugin.js"></script>
 </body>
